--- a/index.html
+++ b/index.html
@@ -1,13 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap" rel="stylesheet">
+    <title>Portfolio-practise</title>
 </head>
+
 <body>
-    
+    <div class="top-banner flexible-container">
+        <div class="text-width-box">
+            <h1><span>Welcome</span> To </h1>
+            <h1>My <span>Second</span> Portfolio!</h1>
+            <h3 class="color-h3">There is a little information about me </h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas, veritatis nulla! Dolorem in itaque
+                quisquam consequuntur eum. Aperiam nihil, error modi dolores harum unde earum adipisci architecto animi,
+                quis nam aliquid eveniet, dolorum atque magnam velit placeat esse illum. Consectetur perspiciatis quam
+                minus illo iusto!</p><br>
+                <a class="link-button" target="_blank" href="https://www.facebook.com/jabidhasan.galib.1">Facebook</a>
+        </div>
+
+        <div class="image-box">
+            <img class="image-width" src="images/undraw_forgot_password_gi2d.svg" alt="">
+        </div>
+
+    </div>
+
 </body>
+
 </html>
