top-banner-complete

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div class="top-banner flexible-container">
+    <section class="top-banner flexible-container">
         <div class="text-width-box">
             <h1><span>Welcome</span> To </h1>
             <h1>My <span>Second</span> Portfolio!</h1>
@@ -27,9 +27,14 @@
 
         <div class="image-box">
             <img class="image-width" src="images/undraw_forgot_password_gi2d.svg" alt="">
+            <h3 class="color-h3 under-img-txt">Join Our team</h3>
+            <ul class="team-mem">
+                <li>Sheikh Mortoza Nur | Frontend Dev</li><br>
+                <li>Robbinhud | Backend Dev</li>
+            </ul>
         </div>
 
-    </div>
+    </section>
 
 </body>
 
