--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <div class="image-box">
             <img class="image-width" src="images/undraw_forgot_password_gi2d.svg" alt="">
-            <h3 class="color-h3 under-img-txt">Join Our team</h3>
+            <h3 class="color-h3 under-img-txt">My team members!</h3>
             <ul class="team-mem">
                 <li>Sheikh Mortoza Nur | Frontend Dev</li><br>
                 <li>Robbinhud | Backend Dev</li>
