--- a/index.html
+++ b/index.html
@@ -37,6 +37,41 @@
 
     </section>
 
+    <section class="middle-banner flexible-container">
+        <div class="image-box">
+            <img class="image-width" src="images/undraw_Done_re_oak4.svg" alt="">
+        </div>
+        <div class="text-width-box" >
+            <h1>Dream Big</h1>
+            <h3 class="color-h3" >Become a Web-Developer</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem quae distinctio necessitatibus, voluptate aspernatur, repellat suscipit commodi sed tempora error ullam alias delectus qui iusto deleniti dolorem. Enim eaque voluptatibus optio aut harum eligendi reiciendis suscipit, tempore sunt quaerat quae! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis consectetur perspiciatis ea dicta minima veniam laborum facilis, maxime sunt asperiores!</p><br>
+            <a class="link-button" target="_blank" href="https://www.facebook.com/jabidhasan.galib.1">Hire Me</a>
+        </div>
+    </section>
+
+    <section class="last-banner">
+
+        <div>
+            <h1>Experiences</h1>
+            <div class="flexible-container">
+                <div id="gradient-color-left" class="text-width-last-box">
+                    <h1>Full Stack Development</h1>
+                    <h3>2021-Present | Senior Developer</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto nisi in hic quidem accusamus ducimus ad eos provident, sunt veritatis, rem vero amet ipsum quos temporibus saepe accusantium quod dolorem minima quaerat, nihil officia voluptas perspiciatis. Mollitia veniam quas dolor?</p>
+                </div>
+                <div id="gradient-color-right" class="text-width-last-box">
+                    <h1>WEB Development</h1>
+                    <h3>2021-Present | Junior Developer</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo aliquid ullam excepturi perferendis, pariatur voluptate quibusdam ipsum numquam libero blanditiis ab? Quos, labore sapiente. Eligendi, corrupti. Libero nemo nihil eligendi non, enim autem velit sapiente molestiae fuga illo quibusdam quam!</p>
+                </div>
+            </div>
+        </div>
+
+    </section>
+    <footer>
+        <p class="footer">© Peter Parker 2021, a Programming Hero initiative.</p>
+    </footer>
+
 </body>
 
 </html>
